--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,94 +13,108 @@
 @import "./layout/footer";
 
 
-@media screen and (min-width: 992px)
-{
-    main .fonctionnement ol{
+@media screen and (min-width: 992px) {
+    main .fonctionnement ol {
         display: flex;
         flex-direction: row;
         justify-content: center;
         gap: 40px;
         padding: 0 30px;
     }
-    main.restaurants{
+
+    main.restaurants {
         padding: 40px;
     }
-    .restaurant_title{
+
+    .restaurant_title {
         justify-content: space-between;
         margin: 0 20px;
     }
-    .bottom_border{
+
+    .bottom_border {
         position: inherit;
         margin-left: 26px;
     }
-    main .card_restaurants{
+
+    main .card_restaurants {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
     }
-    main .card{
+
+    main .card {
         width: 600px;
         height: 275px;
     }
-    main .card_heart{
+
+    main .card_heart {
         right: 20px;
         top: 32px;
     }
-    .menu_flex{
+
+    .menu_flex {
         display: flex;
     }
-    .menu_entrees, .menu_plats, .menu_desserts{
+
+    .menu_entrees,
+    .menu_plats,
+    .menu_desserts {
         width: 33%;
     }
-    .main_menu .btn{
+
+    .main_menu .btn {
         width: 20%;
         margin-bottom: 40px;
     }
-    .btn_center{
+
+    .btn_center {
         display: flex;
         justify-content: center;
-    }
-    footer {
-    h3{
-        display: flex;
-        justify-content: center;
-        letter-spacing: 2px;
     }
 
-    .footer_flex{
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        margin: 0 25px 20px 0;
-    }
-}
-}
-
-@media  screen and (min-width: 768px) {
-    
-    .main_menu .btn{
-        width: 20%;
-        margin-bottom: 40px;
-    }
-    .btn_center{
-        display: flex;
-        justify-content: center;
-    
-}
-    }
     footer {
-        h3{
+        h3 {
             display: flex;
             justify-content: center;
             letter-spacing: 2px;
         }
-    
-        .footer_flex{
+
+        .footer_flex {
             flex-direction: row;
             justify-content: space-between;
             align-items: center;
             margin: 0 25px 20px 0;
         }
     }
+}
+
+@media screen and (min-width: 768px) {
+
+    .main_menu .btn {
+        width: 20%;
+        margin-bottom: 40px;
+    }
+
+    .btn_center {
+        display: flex;
+        justify-content: center;
+
+    }
+
+    footer {
+        h3 {
+            display: flex;
+            justify-content: center;
+            letter-spacing: 2px;
+        }
+
+        .footer_flex {
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            margin: 0 25px 20px 0;
+        }
+    }
+}
 
 /*# sourceMappingURL=styles.css.map */
